WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53062
Leaking CSSRuleDataList objects
https://bugs.webkit.org/show_bug.cgi?id=53062
Summary
Leaking CSSRuleDataList objects
Simon Fraser (smfr)
Reported
2011-01-24 21:50:19 PST
Created
attachment 80017
[details]
Leaks log Running 'run-webkit-tests --debug --leaks LayoutTests/fast/css' shows some leaks of CSSRuleDataList objects. On SnowLeopard, at
r76568
. Massaged leaks output attached. Sample stack is: | WebCore::JSNode::appendChild(JSC::ExecState*) | WebCore::Node::appendChild(WTF::PassRefPtr<WebCore::Node>, int&, bool) | WebCore::ContainerNode::appendChild(WTF::PassRefPtr<WebCore::Node>, int&, bool) | WebCore::notifyChildInserted(WebCore::Node*) | WebCore::HTMLStyleElement::insertedIntoDocument() | WebCore::StyleElement::insertedIntoDocument(WebCore::Document*, WebCore::Element*) | WebCore::StyleElement::process(WebCore::Element*) | WebCore::StyleElement::createSheet(WebCore::Element*, int, WTF::String const&) | WebCore::CSSStyleSheet::checkLoaded() | WebCore::HTMLStyleElement::sheetLoaded() | WebCore::StyleElement::sheetLoaded(WebCore::Document*) | WebCore::Document::removePendingSheet() | WebCore::Document::styleSelectorChanged(WebCore::StyleSelectorUpdateFlag) | WebCore::Document::recalcStyle(WebCore::Node::StyleChange) | WebCore::Element::recalcStyle(WebCore::Node::StyleChange) | WebCore::Document::styleSelector() | WebCore::Document::createStyleSelector() | WebCore::CSSStyleSelector::CSSStyleSelector(WebCore::Document*, WebCore::StyleSheetList*, WebCore::CSSStyleSheet*, WebCore::CSSStyleSheet*, WTF::Vector<WTF::RefPtr<WebCore::CSSStyleSheet>, 0ul> const*, bool, bool) | WebCore::CSSRuleSet::addRulesFromSheet(WebCore::CSSStyleSheet*, WebCore::MediaQueryEvaluator const&, WebCore::CSSStyleSelector*) | WebCore::CSSRuleSet::addStyleRule(WebCore::CSSStyleRule*) | WebCore::CSSRuleSet::addRule(WebCore::CSSStyleRule*, WebCore::CSSSelector*) | WebCore::CSSRuleSet::addToRuleSet(WTF::AtomicStringImpl*, WTF::HashMap<WTF::AtomicStringImpl*, WebCore::CSSRuleDataList*, WTF::PtrHash<WTF::AtomicStringImpl*>, WTF::HashTraits<WTF::AtomicStringImpl*>, WTF::HashTraits<WebCore::CSSRuleDataList*> >&, WebCore::CSSStyleRule*, WebCore::CSSSelector*) | WebCore::CSSRuleDataList::CSSRuleDataList(unsigned int, WebCore::CSSStyleRule*, WebCore::CSSSelector*) | WTF::fastMalloc(unsigned long)
Attachments
Leaks log
(248.28 KB, text/plain)
2011-01-24 21:50 PST
,
Simon Fraser (smfr)
no flags
Details
Patch
(1.18 KB, patch)
2011-01-24 22:01 PST
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2011-01-24 21:50:59 PST
<
rdar://problem/8911607
>
Simon Fraser (smfr)
Comment 2
2011-01-24 22:01:58 PST
Created
attachment 80021
[details]
Patch
Simon Fraser (smfr)
Comment 3
2011-01-24 22:09:37 PST
http://trac.webkit.org/changeset/76573
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug