2011-01-24  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        Leaking CSSRuleDataList objects
        https://bugs.webkit.org/show_bug.cgi?id=53062

        Fix leaked CSSRuleDataLists added to the m_pseudoRules hash.

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSRuleSet::~CSSRuleSet):

git-svn-id: svn://svn.chromium.org/blink/trunk@76573 bbb929c8-8fbe-4397-9dbb-9b2b20218538