third_party/WebKit/Source/WebCore/css/CSSStyleSelector.cpp
@@ -2886,6 +2886,7 @@ CSSRuleSet::~CSSRuleSet()
 { 
     deleteAllValues(m_idRules);
     deleteAllValues(m_classRules);
+    deleteAllValues(m_pseudoRules);
     deleteAllValues(m_tagRules);
 }
 
